# cursor_sqli

./: .gitignore  README.md  custom_payloads.yaml  load_custom_payloads.py  pyproject.toml  requirements.txt  test_auto_detect.py  test_automation.ps1  test_automation.sh  test_custom_payloads.py  test_dict_selector_fix.py  test_firefox_tool.py  test_performance.py  tmp.txt
custom_payloads_templates/: auth_bypass.yaml  blind_injection.yaml  dangerous_actions.yaml  data_extraction.yaml
src/cursor_sqli/: crew.py  main.py
src/cursor_sqli/config/: agents.yaml  tasks.yaml
src/cursor_sqli/tools/: __init__.py  executor_tools.py  payload_tools.py  reconnaissance_tools.py  scanner_tools.py
tests/: test_sqli_tool.py
