[project]
name = "cursor_sqli"
version = "0.1.0"
description = "Cursor_Sqli using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0"
]

[project.scripts]
cursor_sqli = "cursor_sqli.main:run"
run_crew = "cursor_sqli.main:run"
train = "cursor_sqli.main:train"
replay = "cursor_sqli.main:replay"
test = "cursor_sqli.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
